--- a/andersen.html
+++ b/andersen.html
@@ -30,7 +30,7 @@
   <div class="container mt-5">
     <img src="images/andersen.jpg" style="height:325px;width:auto;" alt="Babysitter Image">
     <h1>Andersen B.</h1>
-    <h4>I am 12 years old and have been babysitting for 1 year. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.</h4>
+    <h4>I am 13 years old and have been babysitting for 2 years. I love to be in nature and I have a younger brother and sister, so I know how to take care of kids. I also play sports. These include softball and football.</h4>
     <a href="index.html" class="btn btn-primary">Back to Home</a>
   </div>
 </body>
