--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section id="about" class="mt-5">
       <h2>About Us</h2>
-      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are 'A' students and try our best to accomodate your needs and always put safety first. Contact us to see if one of us will be available to babysit when you need us. Thank you!</h4>
+      <h4>We are best friends and each have experience watching kids. We all have siblings and help around the house. We are 'A' students, members of the IB student leadership team at our school, and try our best to accomodate your needs and always put safety first. Contact us to see if one of us will be available to babysit when you need us. Thank you!</h4>
     </section>
 
     <section id="sitters" class="mt-5">
