--- a/index.html
+++ b/index.html
@@ -70,10 +70,13 @@
     </section>
 
     <section id="rates" class="mt-5">
-      <h2>Hourly Cash Rate - Maximums: 4 children / 4 hours</h2>
+      <h2>Hourly Cash/Venmo/Zelle Rate - Maximums: 4 children / 4 hours</h2>
       <ul>
         <li>
-          <h4>$12 for the first child and $3 for each additional child.</h4>
+          <h4>$12 for your first child and $3 for each additional child.</h4>
+          </li>
+        <li>
+          <h4>If available, 2 of the sitters will babysit and split the fee.</h4>
           </li>
       </ul>
       
