--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="EP Sitters - Babysitting Service by 7th Grade Girls from Edison Park, IL">
   <title>EP Sitters - Babysitting Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <style>
     body { padding-top: 3rem; background-color: #f0f4f8; color: #333; }
     .navbar { background-color: #6c63ff; }
