--- a/addy.html
+++ b/addy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Addy - EP Sitters</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
     <style>
     body { padding-top: 3rem; background-color: #f0f4f8; color: #333; }
     .navbar { background-color: #6c63ff; }
