--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
       <div class="row">
         <div class="col-md-3"><a href="addy.html" class="btn btn-primary btn-lg">Addy</a></div>
         <div class="col-md-3"><a href="ruby.html" class="btn btn-primary btn-lg">Ruby</a></div>
+        <div class="col-md-3"><a href="eloise.html" class="btn btn-primary btn-lg">Eloise</a></div>
         <div class="col-md-3"><a href="andersen.html" class="btn btn-primary btn-lg">Andersen</a></div>
       </div>
     </section>
