--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h4>$12 for your first child and $3 for each additional child.</h4>
           </li>
         <li>
-          <h4>If available, 2 of the sitters will babysit and split the fee.</h4>
+          <h4>If 2 sitters are available, they will babysit together and split the fee if you prefer.</h4>
           </li>
       </ul>
       
@@ -92,8 +92,6 @@
       <h2>Contact Us</h2>
       <h4>Please contact us by email to request a sitting or with any questions: <a href="mailto:epsitters@gmail.com">epsitters@gmail.com</a>.  If requesting services, please include dates, times, and info on your children along with your name and phone number.  Someone should respond within 24 hours by email or phone.</h4>
     </section>
-
-
 
      </main>
 
